Fixed white space and moved board to end

--- a/style.css
+++ b/style.css
@@ -9,13 +9,23 @@ body {
     width: 100%;
     margin: 0;
     margin: auto;
-    justify-content: center;
+    justify-content: flex-end;
     box-sizing: border-box;
+}
+@media only screen and (max-width: 650px) {
+    .board {
+        display: flex;
+        width: 100%;
+        margin: 0;
+        margin: auto;
+        justify-content: center;
+        box-sizing: border-box;
+    }
 }
 
 .box {
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
     border: 5px solid black;
     padding: 5px 0px 0px 0px;
     text-align: center;
